2008-03-24  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/playback/gstdecodebin2.c: (gst_decode_bin_dispose),
	(gst_decode_bin_set_caps), (gst_decode_bin_get_caps),
	(gst_decode_bin_set_subs_encoding),
	(gst_decode_bin_get_subs_encoding),
	(gst_decode_bin_autoplug_factories), (connect_pad), (are_raw_caps),
	(deactivate_free_recursive):
	Protect caps property with the object lock.
	Protect encoding property with the object lock.
	Keep list of elements we added that have the subtitle-encoding property.
	Distribute the subtitle-encoding to all of the elements when it
	changes.

2008-03-24  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst-libs/gst/audio/gstaudiosink.c: (gst_audioringbuffer_release):
	Small debug improvement.

	* gst-libs/gst/audio/gstbaseaudiosink.c:
	(gst_base_audio_sink_render):
	Fix bug in determining the sample start/stop position, we want to base
	this decision on the fact that we are going forwards or backwards, not
	slower or faster. This fixes some ugly resync warnings when playing at
	very slow speeds.

2008-03-23  Sebastian Dröge  <slomo@circular-chaos.org>

	* ext/gio/gstgio.c: (gst_gio_get_supported_protocols):
	Correctly set the supported URI schemes and don't leave
	some schemes in the middle or at the start at NULL.

2008-03-23  Tim-Philipp Müller  <tim at centricular dot net>

	* tests/check/elements/gdpdepay.c:
	  Make test compile without unused function/variable warnings on PPC.
 
2008-03-22  Sebastian Dröge  <slomo@circular-chaos.org>

	* configure.ac:
	* ext/alsa/gstalsamixerelement.c:
	(gst_alsa_mixer_element_class_init):
	* ext/alsa/gstalsasink.c: (gst_alsasink_class_init):
	* ext/alsa/gstalsasrc.c: (gst_alsasrc_class_init):
	* ext/cdparanoia/gstcdparanoiasrc.c:
	(gst_cd_paranoia_src_class_init):
	* ext/gio/gstgiosink.c: (gst_gio_sink_class_init):
	* ext/gio/gstgiosrc.c: (gst_gio_src_class_init):
	* ext/gio/gstgiostreamsink.c: (gst_gio_stream_sink_class_init):
	* ext/gio/gstgiostreamsrc.c: (gst_gio_stream_src_class_init):